<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/main_activity_main_card_view_all_margin"
    android:elevation="@dimen/main_activity_main_card_view_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_activity_all_tv_all_margin"
            android:text="@string/main_activity_tv_title_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_value_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_activity_all_tv_all_margin"
            app:layout_constraintStart_toEndOf="@+id/tv_title_id"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="ID Value" />

        <TextView
            android:id="@+id/tv_title_num_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_activity_all_tv_all_margin"
            android:text="@string/main_activity_tv_titile_num_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_id" />

        <TextView
            android:id="@+id/tv_value_num_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_activity_all_tv_all_margin"
            app:layout_constraintStart_toEndOf="@id/tv_title_num_code"
            app:layout_constraintTop_toBottomOf="@id/tv_title_id"
            tools:text="Num Code Value" />

        <TextView
            android:id="@+id/tv_title_char_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_activity_all_tv_all_margin"
            android:text="@string/main_activity_tv_title_char_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_num_code" />

        <TextView
            android:id="@+id/tv_value_char_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_activity_all_tv_all_margin"
            app:layout_constraintStart_toEndOf="@id/tv_title_char_code"
            app:layout_constraintTop_toBottomOf="@id/tv_title_num_code"
            tools:text="Char Code Value" />

        <TextView
            android:id="@+id/tv_title_nominal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_activity_all_tv_all_margin"
            android:text="@string/mani_activity_tv_titile_nominal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_char_code" />

        <TextView
            android:id="@+id/tv_value_nominal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_activity_all_tv_all_margin"
            app:layout_constraintStart_toEndOf="@id/tv_title_nominal"
            app:layout_constraintTop_toBottomOf="@id/tv_title_char_code"
            tools:text="Nominal Value" />

        <TextView
            android:id="@+id/tv_title_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_activity_all_tv_all_margin"
            android:text="@string/main_activity_tv_title_full_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_nominal" />

        <TextView
            android:id="@+id/tv_value_full_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_activity_all_tv_all_margin"
            app:layout_constraintStart_toEndOf="@id/tv_title_full_name"
            app:layout_constraintTop_toBottomOf="@id/tv_title_nominal"
            tools:text="Full name Value" />

        <TextView
            android:id="@+id/tv_title_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_activity_all_tv_all_margin"
            android:text="@string/main_activity_tv_title_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_full_name" />

        <TextView
            android:id="@+id/tv_value_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_activity_all_tv_all_margin"
            app:layout_constraintStart_toEndOf="@id/tv_title_value"
            app:layout_constraintTop_toBottomOf="@id/tv_title_full_name"
            tools:text="Value Value" />

        <TextView
            android:id="@+id/tv_title_previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_activity_all_tv_all_margin"
            android:text="@string/main_activity_tv_title_previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_value" />

        <TextView
            android:id="@+id/tv_value_previous"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/main_activity_all_tv_all_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_title_previous"
            app:layout_constraintTop_toBottomOf="@id/tv_title_value"
            tools:text="Previous Value" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>